Added all robots in list
Links still missing

--- a/links.html
+++ b/links.html
@@ -8,12 +8,66 @@ Methods for Evaluation : Accompanying links </title>
 
 <h1>Musical Robots - Overview and
 Methods for Evaluation </h1>
-<p>Accompanying links with examples of robots mentioned in the chapter. </p>
 
+
+<h2>Robots mentioned in the chapter: </h2>
 <ul>
+    <li>Beyoncé hologram</li>
+    <li>Captured By Robots GTRBot </li>
+    <li>Cog </li>
+    <li>Compressorhead</li>
+    <li>D-knock</li>
+    <li>Edwin Scott Votey's Pianola </li>
+    <li>Eleee</li>
+    <li>Eazy-E (N.W.A.) hologram</li>
+    <li>Expressive Machines Musical Instruments (EMMI)</li>
+    <li>Fredrik Gran's Cello robot </li>
+    <li>Freddie Mercury voice synthesis</li>
+    <li>Georgia Tech’s “Robotic Drumming Prosthetic Arm”</li>
+    <li>Gorillaz hologram</li>
+    <li>Hatsune Miku</li>        
     <li>The Prayer: <a href="https://theprayer.diemutstrebe.com/ ">Website</a> <a href="https://youtu.be/V-QzpbOn_M0 ">Video</a></li>
-    <li> Waseda Saxophonist Robot No. 2 (WAS2): <a href="http://www.takanishi.mech.waseda.ac.jp/top/research/music/saxophone/was_2/index.htm">Website</a></li>
+    <li>Ismail ibn al-Razzaz al-Jazari’s mechanical boat with four musical automata </li>
+    <li>Jacques de Vaucanson’s Flute Player automata </li>
+    <li>Kagamine Rin and Kagamine Len</li>
+    <li>Kurt Cobain simulation</li>
+    <li>LEMUR's (Eric Singer) TibetBot</li>
+    <li>LEMUR's ModBots (ShivaBot)</li>
+    <li>Makoto Kajitani Mubot (performing on clarinet)</li>
+    <li>Mariah Carey hologram</li>
+    <li>N.A. Baginsky's Aglaopheme </li> 
+    <li>Napoleon Forneaux' Pianista piano </li>
+    <li>Old Dirty Bastard (Wu-Tang Clan) hologram </li>
+    <li>Paweł Zadrożniak's Floppotron </li>
+    <li>Pierre Jaquet-Droz’s Musical Lady </li>
+    <li>Roger Dannenberg's McBlare</li>
+    <li>Robotic Drumming Prosthetic Arm</li>
+    <li>Sergio Jordà's Afasia Project - Violin robot </li>
+    <li>Shimon</li>
+    <li>STRINGTRESS</li>
+    <li>Trons</li>
+    <li>Robotic Drummer</li>
+    <li>Third Drumming Arm</li> 
+    <li>Trimpin's robotic idiophones </li>
+    <li>TronS</li>
+    <li>Tupac Shakur simulation/hologram (with Dr. Dre and Snoop Dogg)</li>
+    <li>Skywalker Piano</li>
+    <li>Utatane Piko</li>
+    <li>Waseda University's WABOT-2 </li>   
+    <li>Waseda University's Saxophonist Robot No. 2 (WAS2): <a href="http://www.takanishi.mech.waseda.ac.jp/top/research/music/saxophone/was_2/index.htm">Website</a></li>
+    <li>Waseda University's anthropomorphic robot playing the flute </li>
+    <li>Zimoun (large-scale sound sculptures featuring individual motors actuating resonant objects) </li>
 </ul>
+
+<h2>Proposed workflow for evaluation of musical robots:</h2>
+
+<ol>
+  <li>Classify the robot using existing taxonomies</li>
+  <li>Specify the context (and goal, if there is such a thing) of the musical interaction</li>
+  <li>Identify stakeholders</li>
+  <li>Informed by steps 1–3, identify evaluation methods from the literature and adapt them, if necessary</li>
+</ol>  
+
 
 </body>
 </html>
