--- a/links.html
+++ b/links.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Musical Robots - Overview and
-Methods for Evaluation : Accompanying links </title>
+<title>Musical Robots - Overview and Methods for Evaluation : Accompanying links </title>
 </head>
 <body>
 
-<h1>Musical Robots - Overview and
-Methods for Evaluation </h1>
-
+<h1>Musical Robots - Overview and Methods for Evaluation </h1>
 
 <h2>Robots mentioned in the chapter: </h2>
 <ul>
-    
     <li>Beyoncé hologram <a href="https://youtu.be/uJyM8Fdw_vE">Video</a></li>    
     <li>Captured! by Robots (GTRBOT666) <a href="http://www.capturedbyrobots.com/"> Website</a> <a href="https://capturedbyrobots.bandcamp.com/"> Sounds</a> <a href="https://www.youtube.com/user/capturedbyrobotsvids"> Videos</a> <a href="https://capturedbyrobots.com/pics.htm"> Pictures </a></li>
     <li>Cog <a href="http://www.ai.mit.edu/projects/humanoid-robotics-group/cog/overview.html"> Website</a> <a href="https://dspace.mit.edu/handle/1721.1/16720"> Publication</a></li> 
