Changed title to include colon
As in the book

--- a/links.html
+++ b/links.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Musical Robots - Overview and Methods for Evaluation : Accompanying links </title>
+<title>Musical Robots: Overview and Methods for Evaluation - Accompanying links </title>
 </head>
 <body>
 
-<h1>Musical Robots - Overview and Methods for Evaluation </h1>
+<h1>Musical Robots: Overview and Methods for Evaluation </h1>
 
 <h2>Robots mentioned in the chapter: </h2>
 <ul>
