Added PIanista as comment

--- a/links.html
+++ b/links.html
@@ -23,7 +23,7 @@
      <li>Gil Weinberg's Shimon <a href="https://gtcmt.gatech.edu/shimon"> Website</a> <a href="https://shimontherobot.bandcamp.com/">Sounds</a> <a href="https://www.shimonrobot.com/video">Videos</a> (see also <a href="https://www.shimonrobot.com/">Shimon's</a> and <a href="https://music.gatech.edu/gil-weinberg">Gil Weinberg's</a> webpages)</li>
     <li>Gorillaz "Clint Eastwood" hologram <a href="https://youtu.be/xxLWuM_SHcI">Video</a></li>
     <li>Hatsune Miku <a href="https://ec.crypton.co.jp/pages/prod/virtualsinger/cv01_us">Webpage</a> <a href="https://www.youtube.com/@HatsuneMiku">Videos</a> (see also concert video playlist <a href="https://youtube.com/playlist?list=PL-pKPpZ1Q5NZqi-pHqc2zKXk8GG3U2fkW">here</a>) <a href="https://en.wikipedia.org/wiki/Hatsune_Miku">Wikipedia</a></li>        
-<li>Henri Fourneaux' Pianista piano </li>
+    <! –– Henri Fourneaux' Pianista piano ––>
     <li>Ismail ibn al-Razzaz al-Jazari’s mechanical boat with four musical automata <a href="https://doi.org/10.1007/978-94-010-2573-7_15">Publication</a> (see page 107)</li>
     <li>Jacques de Vaucanson’s Flute Player automata <a href="https://fr.wikipedia.org/wiki/Fl%C3%BBteur_automate_de_Vaucanson">Wikipedia</a> <a href="https://www.parismuseescollections.paris.fr/fr/musee-carnavalet/oeuvres/les-automates-de-vaucanson#infos-principales">Picture </a><a href="https://gallica.bnf.fr/ark:/12148/bpt6k1511726m">Publication</a></li>
     <li>Kagamine Rin and Len <a href="https://ec.crypton.co.jp/pages/prod/virtualsinger/cv02">Webpage</a> <a href="https://en.wikipedia.org/wiki/Kagamine_Rin/Len">Wikipedia</a></li>
